minor fixes to text colors / alignment

--- a/playground/scss/styles.scss
+++ b/playground/scss/styles.scss
@@ -99,7 +99,7 @@ nav {
     display: flex;
     &__item {
         font-size: 2rem;
-        margin-right: 1rem;
+        margin-right: 3rem;
         :last-child {
             margin-right: 0;
         }
@@ -271,9 +271,13 @@ nav {
     &__item {
         font-weight: 300;
         font-size: 1.8rem;
-        padding: 0px 5px;
-        color: $light-blue;
-        border-right: solid 1px #2A8AFF;;
+        padding: 0px 1rem;
+        margin-bottom: 1rem;
+        color: #943b00;
+        border-right: solid 1px #2A8AFF;
+        &:first-child {
+            padding-left: 0;
+        }
         &:last-child {
             border-right: none;
         }
